# SwitchLink

./: .gitignore  99-nintendo-switch.rules  CHANGELOG.md  CLIENT_IDEAS.md  CROSS_COMPILE.md  Cargo-egui.toml  Cargo.toml  LICENSE  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UI_GUIDE.md  UI_IMPROVEMENTS.md  build-windows.sh  build.sh  dbi-backend-rust.desktop  egui_main.rs  install.sh  run.sh  test-connection.sh  test_usb.rs
.github/workflows/: release.yml
src/: cli.rs  cli_demo.rs  database.rs  egui_app.rs  egui_demo.rs  file_manager.rs  gui.rs  main.rs  protocol.rs  usb.rs
switch-client/: CLEANUP_SUMMARY.md  COMPARISON_WITH_AWOO.md  Cargo.toml  FINAL_SUMMARY.md  INSTALLATION_FIX.md  INSTALLATION_GUIDE.md  PROJECT_OVERVIEW.md  QUICKSTART_TH.md  README.md  SETUP_GUIDE.md  STATUS.md  TODO.md  build-switch.sh  switchlink-client.nacp  switchlink-client.nro
switch-client/control/: control.nacp
switch-client/exefs/: main
switch-client/hacbrewpack_nsp/: SwitchLink_Installer.nsp
switch-client/hacbrewpack_temp/: control_sec0_ivfc_lvl1  control_sec0_ivfc_lvl2  control_sec0_ivfc_lvl3  control_sec0_ivfc_lvl4  control_sec0_ivfc_lvl5  control_sec0_ivfc_lvl6  control_sec0_romfs  meta_sec0_pfs0  meta_sec0_pfs0_hashtable  program_sec0_exefs  program_sec0_exefs_hashtable
switch-client/hacbrewpack_temp/cnmt/: Application_0000000000000000.cnmt
switch-client/include/: es_wrapper.h  pfs0.h  stream_installer.h  usb_client.h
switch-client/source/: content_meta.cpp  es_wrapper.c  main.cpp  nsp_installer.cpp  pfs0.cpp  stream_installer.cpp  usb_client.cpp
switchlink-client/: .gitignore  Makefile
switchlink-client/include/: content_meta.h  nsp_installer.h  usb_client.h
switchlink-client/source/: content_meta.cpp  pfs0.cpp  stream_installer.cpp  usb_client.cpp
