[package]
name = "switchlink-backend"
version = "1.0.0"
edition = "2021"
authors = ["Bundit Nuntates <bundit.nu@gmail.com>"]
license = "MIT"
description = "SwitchLink - High-performance Nintendo Switch file transfer backend (inspired by DBI)"
repository = "https://github.com/silkyland/switchlink"
keywords = ["nintendo-switch", "switchlink", "usb", "gui", "file-transfer"]
categories = ["games", "gui"]

[dependencies]
# USB communication
rusb = "0.9"

# GUI framework - eGUI (works great in Linux!)
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# File dialog
rfd = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
bytes = "1.5"
dirs = "5.0"
open = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
