[package]
name = "switchlink-client"
version = "0.1.0"
edition = "2021"
authors = ["Bundit Nuntates <bundit.nu@gmail.com>"]

[dependencies]
# Core dependencies for no_std environment
libnx = { git = "https://github.com/aarch64-switch-rs/libnx-rs" }

# USB communication
# We'll use raw USB endpoints for maximum performance

# Serialization (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Error handling
anyhow = { version = "1.0", default-features = false }

# Utilities
bytes = { version = "1.5", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
panic = "abort"
